--- a/index_ES.html
+++ b/index_ES.html
@@ -120,7 +120,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>La contaminación Lumínica es un problema de todos</h1>
-              <p>Muchos estudios han provado como la contaminación lumínica afecta a la contaminación del aire, la salud humana, la pérdida de biodiversidad, pérdida de seguridad vial,falsa seguridad ciudadana,despilfarro energético y recursos, y unapérdida de el patrimonio cultural.</p>
+              <p>Muchos estudios han probado cómo la contaminación lumínica afecta a la contaminación del aire, la salud humana, la pérdida de biodiversidad, pérdida de seguridad vial, falsa seguridad ciudadana, despilfarro energético y recursos, y una pérdida del patrimonio cultural.</p>
               <p><a class="btn btn-lg btn-primary" href="https://www.youtube.com/watch?v=vv8HHdpt8Es" role="button" target="_blank">Más información</a></p>
             </div>
           </div>
@@ -131,9 +131,9 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Estrella a estrella podemos crear una Galaxia.</h1>
-              <h2>Ayudanos a luchar contra la contaminación lumínica y descubre la Tierra de noche.</h2>
+              <h2>Ayúdanos a luchar contra la contaminación lumínica y descubre la Tierra de noche.</h2>
               <p>La ciencia tiene recursos limitados para estudiar la incleible cantidad de datos que disponemos sobre contaminación lumínica. Pero con tu ayuda, podemos cambiar el mundo.</p>
-              <h1>¡¡¡Ayudanos!!!</h1>
+              <h1>¡¡¡Ayúdanos!!!</h1>
               <p><a class="btn btn-lg btn-primary" href="http://crowdcrafting.org/app/darkskies/" role="button">Clasifica imágenes</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a class="btn btn-lg btn-primary" href="http://crowdcrafting.org/app/nightcitiesiss/" role="button">Crea un mapa</a></p>
             </div>
           </div>
@@ -156,13 +156,13 @@
         <div class="col-lg-4">
           <!<img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
           <h2>Ciudades en la Noche</h2>
-          <p>Desde 2003, los astronautas han tomado fotos desde la Estación Espacial Internacional. Muchas de estas imágenes han sido públicadas por diferentes medios de comunicación e internet. Sin embargo, la mayoria de las imágenes no han sido publicadas y permanecen en el archivo sin haber sido mostradas al mundo. Hemos hecho una selección en esta <a href="#gallery">galeria</a> para mostrar más de mil ejemplos de ciudades durante la noche. Sin embargo,  aun permanecen cientos de miles de imágenes por descubrir. <a href="http://www.crowcrafting.org/app/darkskies/">¡¡Ayudanos!!</a> </p>
+          <p>Desde 2003, los astronautas han tomado fotos desde la Estación Espacial Internacional. Muchas de estas imágenes han sido públicadas por diferentes medios de comunicación e internet. Sin embargo, la mayoria de las imágenes no han sido publicadas y permanecen en el archivo sin haber sido mostradas al mundo. Hemos hecho una selección en esta <a href="#gallery">galeria</a> para mostrar más de mil ejemplos de ciudades durante la noche. Sin embargo,  aún permanecen cientos de miles de imágenes por descubrir. <a href="http://www.crowcrafting.org/app/darkskies/">¡¡Ayudanos!!</a> </p>
           <p><a class="btn btn-default" href="#gallery" role="button">Más detalles &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <!<img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
           <h2>Contaminación lumínica</h2>
-          <p>La contaminación lumínica causa serios problemas. Sus efectos pueden ser medidos desde el interior de tu dormitorio a cientos de kilometros. La luz destroza la esencia de la noche, la oscuridad. Los humanos tenemos un miedo ancestral a la oscuridad, pero demasiada luz produce efectos muy negativos en el ecosistema y en nuestra salud.</p>
+          <p>La contaminación lumínica causa serios problemas. Sus efectos pueden ser medidos desde el interior de tu dormitorio a cientos de kilómetros. La luz destroza la esencia de la noche, la oscuridad. Los humanos tenemos un miedo ancestral a la oscuridad, pero demasiada luz produce efectos muy negativos en el ecosistema y en nuestra salud.</p>
           <p>Las imagenes de satélite nos ayudan a medir y comparar como se iluminan grandes áreas. Con los colores de las imágenes tomadas por los astronautas, podemos estimar la eficiencia de la iluminación en muchas ciudades del planeta.</p>
           <p><a class="btn btn-default" href="http://guaix.fis.ucm.es/DarkSkies" role="button" target="_blank">Más detalles &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
@@ -170,7 +170,7 @@
           <!<img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
           <h2>Ciencia ciudadana</h2>
           <p>La ciencia ciudadana es una herramienta para la investigación científica y para la educación. Mientras nos ayudas a clasificar miles de imágenes tomadas por astronautas, puedes aprender geografía y como es la tierra de noche. Los humanos somos mucho más eficientes que los ordenadores en el reconocimiento de patrones. Por lo que cualquier ciudadano puede realizar una contribución significativa.</p>
-          <p>Nosotros necesitamos volutntarios para clasificar las imágenes e identificar la posicion que aparece en las imágenes para crear mapas de contaminación lumínica. Ello ayudará a los gobiernos y a las autoridades locales a realizar las decisiones correctas para reducir la contaminación lumínica.</p>
+          <p>Nosotros necesitamos volutntarios para clasificar las imágenes e identificar la posición que aparece en las imágenes para crear mapas de contaminación lumínica. Ello ayudará a los gobiernos y a las autoridades locales a realizar las decisiones correctas para reducir la contaminación lumínica.</p>
           <p><a class="btn btn-default" href="http://www.crowcrafting.org/app/darkskies/" role="button">Más detalles&raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
@@ -199,8 +199,8 @@
           <img src="https://farm6.staticflickr.com/5198/14361426623_901a2ca56e.jpg" class="featurette-image img-responsive">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">¿Como me afecta la contaminación luminica? <span class="text-muted">Descubrelo por ti mismo.</span></h2>
-          <p class="lead">Puedes ver en esta imagen como la luz muchas veces nos ciega. La exposición a la luz durante la noche tambien afecta a los <a href="http://www.cofis.es/pdf/fys/fys21/fys21_20-22.pdf"> ciclos del sueño</a> y esta relacionado con algunos tipos de <a href="http://jnci.oxfordjournals.org/content/93/20/1513.full">cáncer.</a></p>
+          <h2 class="featurette-heading">¿Cómo me afecta la contaminación luminica? <span class="text-muted">Descúbrelo por ti mismo.</span></h2>
+          <p class="lead">Puedes ver en esta imagen como la luz muchas veces nos ciega. La exposición a la luz durante la noche también afecta a los <a href="http://www.cofis.es/pdf/fys/fys21/fys21_20-22.pdf"> ciclos del sueño</a> y está relacionado con algunos tipos de <a href="http://jnci.oxfordjournals.org/content/93/20/1513.full">cáncer.</a></p>
         </div>
       </div>
 
@@ -209,7 +209,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">¿Existe una solución? <span class="text-muted">¡¡Sí!!</span></h2>
-          <p class="lead">La tecnología actual permite prevemir las emisiones a lugares indeseados. Los sistemas de iluminación inteligentes son capaces de regular la imuminación de manera automática dependiendo de las necesidades.</p>
+          <p class="lead">La tecnología actual permite prevemir las emisiones a lugares indeseados. Los sistemas de iluminación inteligentes son capaces de regular la iluminación de manera automática dependiendo de las necesidades.</p>
         </div>
         <div class="col-md-5">
           <!<img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
